@@ -100,14 +100,14 @@ namespace cURLpp
     typedef const cURLpp::HttpPost &HandleOptionType;
   };
 
-  template< >
-  struct OptionContainerType< std::ostream * >
-  {
-    typedef const std::list< cURLpp::FormPart * > &ParamType;
-    typedef cURLpp::HttpPost ValueType;
-    typedef std::list< cURLpp::FormPart * > ReturnType;
-    typedef const cURLpp::HttpPost &HandleOptionType;
-  };
+//   template< >
+//   struct OptionContainerType< std::ostream * >
+//   {
+//     typedef const std::list< cURLpp::FormPart * > &ParamType;
+//     typedef cURLpp::HttpPost ValueType;
+//     typedef std::list< cURLpp::FormPart * > ReturnType;
+//     typedef const cURLpp::HttpPost &HandleOptionType;
+//   };
 
 }
 
